--- a/css/style.css
+++ b/css/style.css
@@ -129,11 +129,16 @@ ul {
   #main-header #main-nav-bar #container-nav-bar #container-group-search-nav-top #input-search-nav-top {
     display: block;
     position: relative;
-    width: 600px;
+    width: 300px;
     height: 50px;
     border-radius: 15px;
     padding-left: 30px;
     border: none;
+  }
+}
+@media screen and (min-width: 1100px) {
+  #main-header #main-nav-bar #container-nav-bar #container-group-search-nav-top #input-search-nav-top {
+    width: 600px;
   }
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-search-nav-top #btn-search-nav-top {
@@ -539,7 +544,7 @@ ul {
   font-size: 10px;
 }
 #section-soon-available #container-cards .card .bottom-item-card .description-card {
-  height: 75px;
+  height: 60px;
   margin: 8px 0 8px;
   font-size: 14px;
   text-overflow: ellipsis;
@@ -577,7 +582,7 @@ ul {
   margin-bottom: 60px;
 }
 #section-blog #container-section-blog {
-  width: 90%;
+  width: 99%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -585,16 +590,23 @@ ul {
   margin: 0 auto;
 }
 #section-blog #container-section-blog .card-blog {
-  width: 345px;
-  height: 400px;
+  width: 320px;
+  height: 380px;
   background-color: #fff;
   border-radius: 20px 20px 0 0;
   overflow: hidden;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  margin-bottom: 40px;
+  margin: 0 5px 40px 5px;
+  transition: all 0.5s ease;
+}
+@media screen and (min-width: 950px) {
+  #section-blog #container-section-blog .card-blog {
+    width: 592px;
+    height: 340px;
+  }
 }
 #section-blog #container-section-blog .card-blog .card-blog-top {
-  height: 50%;
+  height: 55%;
   background-image: url(../img/top-img-card.png);
   background-position: center;
   background-size: cover;
@@ -621,7 +633,7 @@ ul {
   float: right;
 }
 #section-blog #container-section-blog .card-blog .card-blog-bottom {
-  height: 50%;
+  height: 45%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -635,7 +647,7 @@ ul {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  margin: 10px 0 24px;
+  margin: 8px 0 14px;
 }
 #section-blog #container-section-blog .card-blog .card-blog-bottom a {
   font-size: 14px;
