--- a/css/style.scss
+++ b/css/style.scss
@@ -135,11 +135,14 @@ ul {
           @media screen and (min-width: 950px) {
             display: block;
             position: relative;
-            width: 600px;
+            width: 300px;
             height: 50px;
             border-radius: 15px;
             padding-left: 30px;
             border: none;
+          }
+          @media screen and (min-width: 1100px) {
+            width: 600px;
           }
         }
 
@@ -580,7 +583,7 @@ ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-      
+
     .card {
       position: relative;
       max-width: 450px;
@@ -618,7 +621,7 @@ ul {
         }
 
         .description-card {
-          height: 75px;
+          height: 60px;
           margin: 8px 0 8px;
           font-size: 14px;
           text-overflow: ellipsis;
@@ -668,7 +671,7 @@ ul {
   }
 
   #container-section-blog {
-    width: 90%;
+    width: 99%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -677,17 +680,23 @@ ul {
 
 
     .card-blog {
-      width: 345px;
-      height: 400px;
+      width: 320px;
+      height: 380px;
       background-color: $white;
       border-radius: 20px 20px 0 0;
       overflow: hidden;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-      margin-bottom: 40px;
-      
+      margin: 0 5px 40px 5px;
+      transition: all 0.5s ease;
+
+      @media screen and (min-width: 950px) {
+        width: 592px;
+        height: 340px;
+      }
+
 
       .card-blog-top {
-        height: 50%;
+        height: 55%;
         background-image: url(../img/top-img-card.png);
         background-position: center;
         background-size: cover;
@@ -717,7 +726,7 @@ ul {
       }
 
       .card-blog-bottom {
-        height: 50%;
+        height: 45%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -732,7 +741,7 @@ ul {
           font-weight: 400;
           font-size: 14px;
           line-height: 24px;
-          margin: 10px 0 24px;
+          margin: 8px 0 14px;
         }
 
         a {
