--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ body {
   background-color: #fafafb;
 }
 
+ul {
+  list-style-type: none;
+}
+
 a {
   text-decoration: none;
   font-weight: bold;
@@ -67,13 +71,6 @@ h3 {
     font-size: 18px;
     line-height: 30px;
   }
-}
-
-ul {
-  text-align: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  list-style-type: none;
 }
 
 #font-logo {
@@ -238,6 +235,7 @@ ul {
 #section-news {
   width: 100%;
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 @media screen and (min-width: 950px) {
   #section-news {
@@ -388,6 +386,7 @@ ul {
 #section-heart {
   width: 100%;
   padding-top: 80px;
+  padding-top: 60px;
 }
 #section-heart p {
   text-align: center;
@@ -397,6 +396,12 @@ ul {
   #section-heart p {
     margin-bottom: 120px;
   }
+}
+#section-heart ul {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  list-style-type: none;
 }
 @media screen and (min-width: 950px) {
   #section-heart ul {
@@ -488,8 +493,8 @@ ul {
 
 #section-soon-available {
   width: 100%;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 #section-soon-available #h3-tag {
   width: 40%;
@@ -510,6 +515,7 @@ ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-top: 30px;
 }
 #section-soon-available #container-cards .card {
   position: relative;
@@ -556,6 +562,7 @@ ul {
 
 #section-cta-available {
   width: 100%;
+  height: 400px;
   padding: 80px;
   background-image: radial-gradient(circle at 19% 90%, rgba(190, 190, 190, 0.04) 0%, rgba(190, 190, 190, 0.04) 17%, transparent 17%, transparent 100%), radial-gradient(circle at 73% 2%, rgba(78, 78, 78, 0.04) 0%, rgba(78, 78, 78, 0.04) 94%, transparent 94%, transparent 100%), radial-gradient(circle at 45% 2%, rgba(18, 18, 18, 0.04) 0%, rgba(18, 18, 18, 0.04) 55%, transparent 55%, transparent 100%), radial-gradient(circle at 76% 60%, rgba(110, 110, 110, 0.04) 0%, rgba(110, 110, 110, 0.04) 34%, transparent 34%, transparent 100%), radial-gradient(circle at 68% 56%, rgba(246, 246, 246, 0.04) 0%, rgba(246, 246, 246, 0.04) 16%, transparent 16%, transparent 100%), radial-gradient(circle at 71% 42%, rgba(156, 156, 156, 0.04) 0%, rgba(156, 156, 156, 0.04) 47%, transparent 47%, transparent 100%), radial-gradient(circle at 46% 82%, rgba(247, 247, 247, 0.04) 0%, rgba(247, 247, 247, 0.04) 39%, transparent 39%, transparent 100%), radial-gradient(circle at 50% 47%, rgba(209, 209, 209, 0.04) 0%, rgba(209, 209, 209, 0.04) 45%, transparent 45%, transparent 100%), linear-gradient(90deg, rgb(8, 104, 174), rgb(5, 73, 123));
   background-position: center;
@@ -566,6 +573,7 @@ ul {
 #section-cta-available p {
   color: #fff;
   text-align: center;
+  margin-bottom: 50px;
 }
 #section-cta-available a {
   background-color: #fff;
@@ -574,14 +582,14 @@ ul {
 }
 
 #section-blog {
-  padding: 80px;
+  padding-top: 120px;
   position: relative;
 }
 #section-blog h3 {
   text-align: center;
 }
 #section-blog h2 {
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 #section-blog #container-section-blog {
   width: 99%;
@@ -660,12 +668,13 @@ ul {
 }
 
 #section-faq {
-  padding: 80px;
   position: relative;
+  padding-top: 120px;
+  padding-bottom: 60px;
 }
 #section-faq h3 {
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 #section-faq #container-faq {
   display: flex;
@@ -676,7 +685,8 @@ ul {
 #section-faq #container-faq hr {
   width: 58%;
   margin-top: 5px;
-  border: 1px solid grey;
+  margin-bottom: 5px;
+  border: 1px solid lightgray;
 }
 #section-faq #container-faq .item-faq {
   position: relative;
@@ -684,7 +694,7 @@ ul {
   max-width: 770px;
   min-height: 80px;
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 30px;
   cursor: pointer;
 }
 #section-faq #container-faq .item-faq .toggle-symbol {
@@ -716,4 +726,91 @@ ul {
   margin-bottom: 5px;
   font-size: 18px;
   font-weight: bold;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 24px;
+}
+#section-faq #banner-faq-contact {
+  width: 90%;
+  height: 350px;
+  margin: 80px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  background-color: #0868ae;
+  border-radius: 50px;
+  color: #fff;
+  padding: 20px;
+}
+#section-faq #banner-faq-contact h4 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+}
+#section-faq #banner-faq-contact p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+}
+#section-faq #banner-faq-contact a {
+  display: block;
+  padding: 12px;
+  padding: 14px;
+  background-color: #ff5e38;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+#section-faq #banner-faq-contact a:hover {
+  background-color: #b53928;
+}
+
+#section-location {
+  position: relative;
+  padding-bottom: 200px;
+}
+#section-location h3 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+#section-location p {
+  width: 90%;
+  margin: 40px auto;
+  font-size: 18px;
+  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  color: #070606;
+}
+#section-location #iframe-google {
+  position: absolute;
+  top: 475px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#section-location #container-info-location {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 200px;
+  margin-top: 540px;
+}
+#section-location #container-info-location ul li {
+  margin: 10px 0;
+}
+#section-location #container-info-location ul li span {
+  font-weight: bold;
+  color: #0868ae;
+}
+
+#footer {
+  width: 100%;
+  height: 350px;
+  background-color: #043a61;
 }/*# sourceMappingURL=style.css.map */
