--- a/css/style.scss
+++ b/css/style.scss
@@ -23,6 +23,10 @@ body {
   background-color: #fafafb;
 }
 
+ul {
+  list-style-type: none;
+}
+
 a {
   text-decoration: none;
   font-weight: bold;
@@ -70,13 +74,6 @@ h3 {
     font-size: 18px;
     line-height: 30px;
   }
-}
-
-ul {
-  text-align: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  list-style-type: none;
 }
 
 #font-logo {
@@ -253,6 +250,7 @@ ul {
 #section-news {
   width: 100%;
   padding-top: 60px;
+  padding-bottom: 60px;
 
   @media screen and (min-width: 950px) {
     padding-top: 120px;
@@ -442,6 +440,7 @@ ul {
 #section-heart {
   width: 100%;
   padding-top: 80px;
+  padding-top: 60px;
 
   p {
     text-align: center;
@@ -453,6 +452,11 @@ ul {
   }
 
   ul {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    list-style-type: none;
+
     @media screen and (min-width: 950px) {
       display: flex;
       flex-wrap: wrap;
@@ -561,8 +565,8 @@ ul {
 
 #section-soon-available {
   width: 100%;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 
   #h3-tag {
     width: 40%;
@@ -584,6 +588,7 @@ ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-top: 30px;
 
     .card {
       position: relative;
@@ -640,8 +645,9 @@ ul {
 
 #section-cta-available {
   width: 100%;
+  height: 400px;
   padding: 80px;
-  background-image: radial-gradient(circle at 19% 90%, rgba(190, 190, 190,0.04) 0%, rgba(190, 190, 190,0.04) 17%,transparent 17%, transparent 100%),radial-gradient(circle at 73% 2%, rgba(78, 78, 78,0.04) 0%, rgba(78, 78, 78,0.04) 94%,transparent 94%, transparent 100%),radial-gradient(circle at 45% 2%, rgba(18, 18, 18,0.04) 0%, rgba(18, 18, 18,0.04) 55%,transparent 55%, transparent 100%),radial-gradient(circle at 76% 60%, rgba(110, 110, 110,0.04) 0%, rgba(110, 110, 110,0.04) 34%,transparent 34%, transparent 100%),radial-gradient(circle at 68% 56%, rgba(246, 246, 246,0.04) 0%, rgba(246, 246, 246,0.04) 16%,transparent 16%, transparent 100%),radial-gradient(circle at 71% 42%, rgba(156, 156, 156,0.04) 0%, rgba(156, 156, 156,0.04) 47%,transparent 47%, transparent 100%),radial-gradient(circle at 46% 82%, rgba(247, 247, 247,0.04) 0%, rgba(247, 247, 247,0.04) 39%,transparent 39%, transparent 100%),radial-gradient(circle at 50% 47%, rgba(209, 209, 209,0.04) 0%, rgba(209, 209, 209,0.04) 45%,transparent 45%, transparent 100%),linear-gradient(90deg, rgb(8,104,174),rgb(5,73,123));
+  background-image: radial-gradient(circle at 19% 90%, rgba(190, 190, 190, 0.04) 0%, rgba(190, 190, 190, 0.04) 17%, transparent 17%, transparent 100%), radial-gradient(circle at 73% 2%, rgba(78, 78, 78, 0.04) 0%, rgba(78, 78, 78, 0.04) 94%, transparent 94%, transparent 100%), radial-gradient(circle at 45% 2%, rgba(18, 18, 18, 0.04) 0%, rgba(18, 18, 18, 0.04) 55%, transparent 55%, transparent 100%), radial-gradient(circle at 76% 60%, rgba(110, 110, 110, 0.04) 0%, rgba(110, 110, 110, 0.04) 34%, transparent 34%, transparent 100%), radial-gradient(circle at 68% 56%, rgba(246, 246, 246, 0.04) 0%, rgba(246, 246, 246, 0.04) 16%, transparent 16%, transparent 100%), radial-gradient(circle at 71% 42%, rgba(156, 156, 156, 0.04) 0%, rgba(156, 156, 156, 0.04) 47%, transparent 47%, transparent 100%), radial-gradient(circle at 46% 82%, rgba(247, 247, 247, 0.04) 0%, rgba(247, 247, 247, 0.04) 39%, transparent 39%, transparent 100%), radial-gradient(circle at 50% 47%, rgba(209, 209, 209, 0.04) 0%, rgba(209, 209, 209, 0.04) 45%, transparent 45%, transparent 100%), linear-gradient(90deg, rgb(8, 104, 174), rgb(5, 73, 123));
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -650,6 +656,7 @@ ul {
   p {
     color: $white;
     text-align: center;
+    margin-bottom: 50px;
   }
 
   a {
@@ -662,7 +669,7 @@ ul {
 // ---------- SECTION - BLOG ----------
 
 #section-blog {
-  padding: 80px;
+  padding-top: 120px;
   position: relative;
 
   h3 {
@@ -670,7 +677,7 @@ ul {
   }
 
   h2 {
-    margin-bottom: 60px;
+    margin-bottom: 80px;
   }
 
   #container-section-blog {
@@ -765,12 +772,13 @@ ul {
 
 
 #section-faq {
-  padding: 80px;
   position: relative;
+  padding-top: 120px;
+  padding-bottom: 60px;
 
   h3 {
     text-align: center;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
   }
 
   #container-faq {
@@ -782,7 +790,8 @@ ul {
     hr {
       width: 58%;
       margin-top: 5px;
-      border: 1px solid grey;
+      margin-bottom: 5px;
+      border: 1px solid lightgray;
     }
 
     .item-faq {
@@ -791,7 +800,7 @@ ul {
       max-width: 770px;
       min-height: 80px;
       padding-left: 15px;
-      padding-right: 15px;
+      padding-right: 30px;
       cursor: pointer;
 
       .toggle-symbol {
@@ -832,8 +841,116 @@ ul {
           margin-bottom: 5px;
           font-size: 18px;
           font-weight: bold;
+          font-style: normal;
+          font-size: 16px;
+          line-height: 24px;
         }
       }
     }
   }
+
+  #banner-faq-contact {
+    width: 90%;
+    height: 350px;
+    margin: 80px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    background-color: $main-blue;
+    border-radius: 50px;
+    color: $white;
+    padding: 20px;
+
+    h4 {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 30px;
+    }
+
+    p {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 28px;
+    }
+
+    a {
+      display: block;
+      padding: 12px;
+      padding: 14px;
+      background-color: $btn-red;
+      color: #fff;
+      border-radius: 10px;
+      text-align: center;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: $btn-red-hover;
+      }
+    }
+  }
+}
+
+
+// ---------- SECTION - LOCATION ----------
+
+
+#section-location {
+  position: relative;
+  padding-bottom: 200px;
+
+  h3 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  p {
+    width: 90%;
+    margin: 40px auto;
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    color: $black;
+  }
+
+  #iframe-google {
+    position: absolute;
+    top: 475px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+  }
+
+  #container-info-location {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    height: 200px;
+    margin-top: 540px;
+    ul {
+      li {
+        margin: 10px 0;
+
+        span {
+          font-weight: bold;
+          color: $main-blue;
+        }
+      }
+    }
+
+  }
+}
+
+// ---------- SECTION - FOOTER ----------
+
+
+#footer {
+  width: 100%;
+  height: 350px;
+  background-color: #043a61;
 }
