--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 ::after,
 ::before {
@@ -91,6 +92,7 @@ h3 {
     left: 0;
     z-index: 999;
     width: 100%;
+    border-bottom: 1px solid gray;
   }
 }
 #main-header #main-nav-bar #container-nav-bar {
@@ -127,7 +129,7 @@ h3 {
     display: block;
     position: relative;
     width: 300px;
-    height: 50px;
+    height: 45px;
     border-radius: 15px;
     padding-left: 30px;
     border: none;
@@ -148,7 +150,7 @@ h3 {
     right: 0;
     top: 0;
     width: 150px;
-    padding: 14px;
+    padding: 12px;
     background-color: #ff5e38;
     color: #fff;
     border-radius: 10px;
@@ -175,7 +177,7 @@ h3 {
 @media screen and (min-width: 950px) {
   #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion #btn-log-in {
     display: block;
-    padding: 12px;
+    padding: 10px;
     background-color: transparent;
     border: 3px solid #ff5e38;
     color: #ff5e38;
@@ -220,7 +222,6 @@ h3 {
   #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion #btn-sign-up span {
     display: block;
     padding: 12px;
-    padding: 14px;
     background-color: #ff5e38;
     color: #fff;
     border-radius: 10px;
@@ -241,6 +242,55 @@ h3 {
   #section-news {
     padding-top: 120px;
   }
+}
+#section-news #container-section-news {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@media screen and (min-width: 950px) {
+  #section-news #container-section-news {
+    flex-wrap: nowrap;
+  }
+}
+#section-news #container-section-news #item-section-news-left h1 {
+  white-space: nowrap;
+}
+@media screen and (min-width: 950px) {
+  #section-news #container-section-news #item-section-news-left h1 {
+    margin-top: 50px;
+    margin-bottom: 100px;
+  }
+}
+#section-news #container-section-news #item-section-news-left p {
+  text-align: center;
+}
+@media screen and (min-width: 950px) {
+  #section-news #container-section-news #item-section-news-left {
+    width: 50%;
+  }
+}
+#section-news #container-section-news #item-section-news-right {
+  width: 100%;
+  text-align: center;
+}
+@media screen and (min-width: 950px) {
+  #section-news #container-section-news #item-section-news-right {
+    width: 50%;
+  }
+}
+#section-news #container-section-news #item-section-news-right #item-news-right-top {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+#section-news #container-section-news #item-section-news-right #item-news-right-top img:first-of-type {
+  margin-right: 15px;
+  margin-bottom: 10px;
+}
+#section-news #container-section-news #item-section-news-right #item-news-right-bottom {
+  display: flex;
+  justify-content: center;
 }
 #section-news .flip {
   position: relative;
@@ -338,49 +388,6 @@ h3 {
 }
 #section-news .text-shadow {
   text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04), 0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04), 7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04), 9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04), 11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04), 13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04), 0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04), 17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04), 19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
-}
-#section-news #container-section-news {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-@media screen and (min-width: 950px) {
-  #section-news #container-section-news {
-    flex-wrap: nowrap;
-  }
-}
-#section-news #container-section-news #item-section-news-left h1 {
-  white-space: nowrap;
-}
-#section-news #container-section-news #item-section-news-left p {
-  text-align: center;
-}
-@media screen and (min-width: 950px) {
-  #section-news #container-section-news #item-section-news-left {
-    width: 50%;
-  }
-}
-#section-news #container-section-news #item-section-news-right {
-  width: 100%;
-  text-align: center;
-}
-@media screen and (min-width: 950px) {
-  #section-news #container-section-news #item-section-news-right {
-    width: 50%;
-  }
-}
-#section-news #container-section-news #item-section-news-right #item-news-right-top {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-}
-#section-news #container-section-news #item-section-news-right #item-news-right-top img:first-of-type {
-  margin-right: 15px;
-  margin-bottom: 10px;
-}
-#section-news #container-section-news #item-section-news-right #item-news-right-bottom {
-  display: flex;
-  justify-content: center;
 }
 
 #section-heart {
@@ -615,9 +622,26 @@ h3 {
     height: 340px;
   }
 }
+#section-blog #container-section-blog .card-blog #pict-aticle-1 {
+  background-image: url(../img/interieur-biblio/biblio6.png);
+}
+#section-blog #container-section-blog .card-blog #pict-aticle-2 {
+  background-image: url(../img/interieur-biblio/biblio5.png);
+}
+#section-blog #container-section-blog .card-blog #pict-aticle-3 {
+  background-image: url(../img/interieur-biblio/Capture\ d’écran\ 2023-03-02\ 145009.png);
+}
+#section-blog #container-section-blog .card-blog #pict-aticle-4 {
+  background-image: url(../img/interieur-biblio/Capture\ d’écran\ 2023-03-02\ 145133.png);
+}
+#section-blog #container-section-blog .card-blog #pict-aticle-5 {
+  background-image: url(../img/interieur-biblio/grd-biblio.jpg);
+}
+#section-blog #container-section-blog .card-blog #pict-aticle-6 {
+  background-image: url(../img/interieur-biblio/paris.png);
+}
 #section-blog #container-section-blog .card-blog .card-blog-top {
   height: 55%;
-  background-image: url(../img/top-img-card.png);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -759,7 +783,6 @@ h3 {
 #section-faq #banner-faq-contact a {
   display: block;
   padding: 12px;
-  padding: 14px;
   background-color: #ff5e38;
   color: #fff;
   border-radius: 10px;
@@ -772,7 +795,7 @@ h3 {
 
 #section-location {
   position: relative;
-  padding-bottom: 200px;
+  padding-bottom: 150px;
 }
 #section-location h3 {
   text-align: center;
@@ -784,7 +807,7 @@ h3 {
   font-size: 18px;
   text-align: center;
   font-style: normal;
-  font-weight: 400;
+  font-weight: bold;
   line-height: 28px;
   color: #070606;
 }
@@ -811,6 +834,189 @@ h3 {
 
 #footer {
   width: 100%;
-  height: 350px;
+  padding: 40px 20px 60px;
   background-color: #043a61;
+}
+#footer #container-footer-top {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+}
+#footer #container-footer-top #item-footer-left {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: baseline;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-left {
+    justify-content: flex-start;
+  }
+}
+#footer #container-footer-top #item-footer-left #group-logo {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  margin-left: -25px;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-left #group-logo {
+    justify-content: flex-start;
+  }
+}
+#footer #container-footer-top #item-footer-left #group-logo img {
+  width: 100px;
+  height: auto;
+}
+#footer #container-footer-top #item-footer-left #group-logo span {
+  color: #fff;
+  font-size: 36px;
+}
+#footer #container-footer-top #item-footer-left ul {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-left ul {
+    margin-top: -20px;
+  }
+}
+#footer #container-footer-top #item-footer-left ul #list-left {
+  margin-right: 20px;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-left ul #list-left {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-left ul #list-right {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -20px;
+  }
+}
+#footer #container-footer-top #item-footer-left ul li {
+  margin: 15px 0;
+}
+#footer #container-footer-top #item-footer-left ul li a {
+  color: #fff;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-left ul li a {
+    margin-right: 20px;
+  }
+}
+#footer #container-footer-top #item-footer-right {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+#footer #container-footer-top #item-footer-right p {
+  color: #fff;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-right p {
+    text-align: start;
+  }
+}
+#footer #container-footer-top #item-footer-right form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 35px;
+}
+#footer #container-footer-top #item-footer-right form input {
+  width: 250px;
+  height: 36px;
+  margin-top: 5px;
+  border-radius: 10px;
+  padding-left: 10px;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-right form input {
+    width: 300px;
+    height: 50px;
+    font-size: 16px;
+  }
+}
+#footer #container-footer-top #item-footer-right form button {
+  display: block;
+  width: 250px;
+  height: 34px;
+  margin-top: 10px;
+  background-color: #ff5e38;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-right form button {
+    width: 110px;
+    height: 48px;
+    font-size: 16px;
+    margin-left: 10px;
+  }
+}
+#footer #container-footer-top #item-footer-right form button:hover {
+  background-color: #b53928;
+  cursor: pointer;
+}
+#footer #container-footer-top #item-footer-right hr {
+  width: 300px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-bottom {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+#footer #container-footer-bottom ul {
+  display: flex;
+  justify-content: center;
+}
+#footer #container-footer-bottom ul li {
+  margin: 20px 10px;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-bottom ul li {
+    margin: 20px;
+  }
+}
+#footer #container-footer-bottom ul li a {
+  color: #667085;
+}
+#footer #container-footer-bottom p {
+  text-align: center;
+  color: #D0D5DD;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-bottom p {
+    margin: 20px;
+  }
+}
+#footer hr {
+  margin-bottom: 20px;
+  max-width: 1440px;
+  margin: 0 auto;
 }/*# sourceMappingURL=style.css.map */
