--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@ $btn-red-hover: #b53928;
 $main-blue: #0868ae;
 $white: #fff;
 $black: #070606;
+$footer: #043a61;
 
 *,
 ::after,
@@ -93,6 +94,7 @@ h3 {
       left: 0;
       z-index: 999;
       width: 100%;
+      border-bottom: 1px solid gray;
     }
 
     background: $main-blue;
@@ -119,7 +121,7 @@ h3 {
         #nav-logo-text {
           font-family: "Risque", cursive, sans-serif;
           font-size: 36px;
-          color: #fff;
+          color: $white;
         }
       }
 
@@ -133,7 +135,7 @@ h3 {
             display: block;
             position: relative;
             width: 300px;
-            height: 50px;
+            height: 45px;
             border-radius: 15px;
             padding-left: 30px;
             border: none;
@@ -153,7 +155,7 @@ h3 {
             right: 0;
             top: 0;
             width: 150px;
-            padding: 14px;
+            padding: 12px;
             background-color: $btn-red;
             color: #fff;
             border-radius: 10px;
@@ -181,7 +183,7 @@ h3 {
 
           @media screen and (min-width: 950px) {
             display: block;
-            padding: 12px;
+            padding: 10px;
             background-color: transparent;
             border: 3px solid $btn-red;
             color: $btn-red;
@@ -226,9 +228,8 @@ h3 {
               @media screen and (min-width: 950px) {
                 display: block;
                 padding: 12px;
-                padding: 14px;
                 background-color: $btn-red;
-                color: #fff;
+                color: $white;
                 border-radius: 10px;
                 text-align: center;
                 transition: background-color 0.3s ease;
@@ -256,6 +257,58 @@ h3 {
     padding-top: 120px;
   }
 
+  #container-section-news {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    @media screen and (min-width: 950px) {
+      flex-wrap: nowrap;
+    }
+
+    #item-section-news-left {
+      h1 {
+        white-space: nowrap;
+        @media screen and (min-width: 950px) {
+          margin-top: 50px;
+          margin-bottom: 100px;
+        }
+      }
+
+      p {
+        text-align: center;
+      }
+
+      @media screen and (min-width: 950px) {
+        width: 50%;
+      }
+    }
+
+    #item-section-news-right {
+      width: 100%;
+      text-align: center;
+
+      @media screen and (min-width: 950px) {
+        width: 50%;
+      }
+
+      #item-news-right-top {
+        display: flex;
+        justify-content: center;
+        align-items: baseline;
+
+        img:first-of-type {
+          margin-right: 15px;
+          margin-bottom: 10px;
+        }
+      }
+
+      #item-news-right-bottom {
+        display: flex;
+        justify-content: center;
+      }
+    }
+  }
 
   .flip {
     position: relative;
@@ -310,7 +363,6 @@ h3 {
     }
   }
 
-  // custom
   .flip {
     position: relative;
     display: inline-block;
@@ -383,55 +435,6 @@ h3 {
       0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04),
       17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04),
       19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
-  }
-
-  #container-section-news {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    @media screen and (min-width: 950px) {
-      flex-wrap: nowrap;
-    }
-
-    #item-section-news-left {
-      h1 {
-        white-space: nowrap;
-      }
-
-      p {
-        text-align: center;
-      }
-
-      @media screen and (min-width: 950px) {
-        width: 50%;
-      }
-    }
-
-    #item-section-news-right {
-      width: 100%;
-      text-align: center;
-
-      @media screen and (min-width: 950px) {
-        width: 50%;
-      }
-
-      #item-news-right-top {
-        display: flex;
-        justify-content: center;
-        align-items: baseline;
-
-        img:first-of-type {
-          margin-right: 15px;
-          margin-bottom: 10px;
-        }
-      }
-
-      #item-news-right-bottom {
-        display: flex;
-        justify-content: center;
-      }
-    }
   }
 }
 
@@ -704,10 +707,32 @@ h3 {
         height: 340px;
       }
 
+      #pict-aticle-1 {
+        background-image: url(../img/interieur-biblio/biblio6.png);
+      }
+
+      #pict-aticle-2 {
+        background-image: url(../img/interieur-biblio/biblio5.png);
+      }
+
+      #pict-aticle-3 {
+        background-image: url(../img/interieur-biblio/Capture\ d’écran\ 2023-03-02\ 145009.png);
+      }
+
+      #pict-aticle-4 {
+        background-image: url(../img/interieur-biblio/Capture\ d’écran\ 2023-03-02\ 145133.png);
+      }
+
+      #pict-aticle-5 {
+        background-image: url(../img/interieur-biblio/grd-biblio.jpg);
+      }
+
+      #pict-aticle-6 {
+        background-image: url(../img/interieur-biblio/paris.png);
+      }
 
       .card-blog-top {
         height: 55%;
-        background-image: url(../img/top-img-card.png);
         background-position: center;
         background-size: cover;
         position: relative;
@@ -880,7 +905,6 @@ h3 {
     a {
       display: block;
       padding: 12px;
-      padding: 14px;
       background-color: $btn-red;
       color: #fff;
       border-radius: 10px;
@@ -900,7 +924,7 @@ h3 {
 
 #section-location {
   position: relative;
-  padding-bottom: 200px;
+  padding-bottom: 150px;
 
   h3 {
     text-align: center;
@@ -913,7 +937,7 @@ h3 {
     font-size: 18px;
     text-align: center;
     font-style: normal;
-    font-weight: 400;
+    font-weight: bold;
     line-height: 28px;
     color: $black;
   }
@@ -932,6 +956,7 @@ h3 {
     justify-content: space-evenly;
     height: 200px;
     margin-top: 540px;
+
     ul {
       li {
         margin: 10px 0;
@@ -951,6 +976,198 @@ h3 {
 
 #footer {
   width: 100%;
-  height: 350px;
-  background-color: #043a61;
+  padding: 40px 20px 60px;
+  background-color: $footer;
+
+  #container-footer-top {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    @media screen and (min-width: 950px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+    }
+
+    #item-footer-left {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: baseline;
+
+      @media screen and (min-width: 950px) {
+        justify-content: flex-start;
+      }
+
+      #group-logo {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+        margin-left: -25px;
+
+        @media screen and (min-width: 950px) {
+          justify-content: flex-start;
+        }
+
+        img {
+          width: 100px;
+          height: auto;
+        }
+
+        span {
+          color: $white;
+          font-size: 36px;
+        }
+      }
+
+      ul {
+        margin-top: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        @media screen and (min-width: 950px) {
+          margin-top: -20px ;
+        }
+
+        #list-left {
+          margin-right: 20px;
+
+          @media screen and (min-width: 950px) {
+            display: flex;
+            flex-wrap: wrap;
+          }
+        }
+
+        #list-right {
+          @media screen and (min-width: 950px) {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: -20px;
+          }
+        }
+
+        li {
+          margin: 15px 0;
+
+          a {
+            color: $white;
+
+            @media screen and (min-width: 950px) {
+              margin-right: 20px;
+            }
+          }
+        }
+      }
+    }
+
+    #item-footer-right {
+      text-align: center;
+      margin-top: 40px;
+      margin-bottom: 20px;
+
+      p {
+        color: $white;
+        @media screen and (min-width: 950px) {
+          text-align: start;
+        }
+      }
+
+      form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 35px;
+
+        input {
+          width: 250px;
+          height: 36px;
+          margin-top: 5px;
+          border-radius: 10px;
+          padding-left: 10px;
+
+          @media screen and (min-width: 950px) {
+            width: 300px;
+            height: 50px;
+            font-size: 16px;
+          }
+        }
+
+        button {
+          display: block;
+          width: 250px;
+          height: 34px;
+          margin-top: 10px;
+          background-color: $btn-red;
+          color: $white;
+          border-radius: 10px;
+          text-align: center;
+          border: none;
+          transition: background-color 0.3s ease;
+
+          @media screen and (min-width: 950px) {
+            width: 110px;
+            height: 48px;
+            font-size: 16px;
+            margin-left: 10px;
+          }
+
+          &:hover {
+            background-color: $btn-red-hover;
+            cursor: pointer;
+          }
+        }
+      }
+
+      hr {
+        width: 300px;
+        margin: 0 auto;
+      }
+    }
+  }
+
+  #container-footer-bottom {
+    @media screen and (min-width: 950px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    ul {
+      display: flex;
+      justify-content: center;
+
+      li {
+        margin: 20px 10px;
+        @media screen and (min-width: 950px) {
+          margin: 20px ;
+        }
+
+        a {
+          color: #667085;
+        }
+      }
+    }
+
+    p {
+      text-align: center;
+      color: #D0D5DD;
+      @media screen and (min-width: 950px) {
+        margin: 20px;
+      }
+    }
+  }
+
+  hr {
+    margin-bottom: 20px;
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+
 }
